# software-bug-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
deployment/mcp-toolbox/: tools.yaml
embedding/: free_embeddings.py
setup/: README.md  docker-compose.yml  init-db.sql  migrate_embeddings_simple.py  test_search_tool.py  test_semantic_search.py
software_bug_assistant/: agent.py  prompt.py
software_bug_assistant/tools/: tools.py
tests/: test_search_tool.py  test_semantic_search.py
